--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<meta name="google-site-verification" content="Fj7yXu5txg2Tgui8QPSlc6jGGV7f30GItvP9jy6UFPk" />
+<head>
+  <meta charset="utf-8">
+  <meta name="google-site-verification" content="Fj7yXu5txg2Tgui8QPSlc6jGGV7f30GItvP9jy6UFPk" />
+</head>
 <title>Rnmctester shop</title>
