--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+<html>
 <head>
   <meta charset="utf-8">
   <meta name="google-site-verification" content="Fj7yXu5txg2Tgui8QPSlc6jGGV7f30GItvP9jy6UFPk" />
+  <title>Rnmctester shop</title>
 </head>
-<title>Rnmctester shop</title>
+</html>
