Basic products pages

--- a/index.html
+++ b/index.html
@@ -5,4 +5,20 @@
   <meta name="google-site-verification" content="Fj7yXu5txg2Tgui8QPSlc6jGGV7f30GItvP9jy6UFPk" />
   <title>Rnmctester shop</title>
 </head>
+<body>
+  <div>
+    <div>
+      <a href="viper.html">Black Diamond Viper</a>
+    </div>
+    <div>
+      <a href="cham.html">Dynastar Cham 97</a>
+    </div>
+    <div>
+      <a href="skialp.html">Rock Empire Skialp</a>
+    </div>
+    <div>
+      <a href="hex.html">Set of hexes</a>
+    </div>
+  </div>
+</body>
 </html>
